@@ -189,7 +189,7 @@ Inst1Quest1 = "1. The Foreman"
 Inst1Quest1_Level = "16"
 Inst1Quest1_Attain = "15"
 Inst1Quest1_Aim = "Kill Glubtok."
-Inst1Quest1_Location = "Lieutenant Horatio Laine (The Deadmines; "..GREEN.."1'"..WHITE..")"
+Inst1Quest1_Location = "Lieutenant Horatio Laine (The Deadmines; "..GREEN.."[1']"..WHITE..")"
 Inst1Quest1_Note = "Glubtok is the first boss, located at "..YELLOW.."[1]"..WHITE.."."
 Inst1Quest1_Prequest = "None"
 Inst1Quest1_Folgequest = "None"
@@ -200,7 +200,7 @@ Inst1Quest2 = "2. The Carpenter"
 Inst1Quest2_Level = "16"
 Inst1Quest2_Attain = "15"
 Inst1Quest2_Aim = "Defeat Helix Gearbreaker."
-Inst1Quest2_Location = "Lieutenant Horatio Laine (The Deadmines; "..GREEN.."1'"..WHITE..")"
+Inst1Quest2_Location = "Lieutenant Horatio Laine (The Deadmines; "..GREEN.."[1']"..WHITE..")"
 Inst1Quest2_Note = "This quest is also automatically given upon entering the Mast Room in Deadmines.\n\nHelix Gearbreaker is the second boss, located at "..YELLOW.."[2]"..WHITE.."."
 Inst1Quest2_Prequest = "None"
 Inst1Quest2_Folgequest = "None"
@@ -211,8 +211,8 @@ Inst1Quest3 = "3. The Machination"
 Inst1Quest3_Level = "16"
 Inst1Quest3_Attain = "15"
 Inst1Quest3_Aim = "Destroy the Foe Reaper 5000."
-Inst1Quest3_Location = "Lieutenant Horatio Laine (The Deadmines; "..GREEN.."1'"..WHITE..")"
-Inst1Quest3_Note = "This quest is also automatically given upon entering the Goblin Foundary in Deadmines.\n\nHelix Gearbreaker is the second boss, located at "..YELLOW.."[3]"..WHITE.."."
+Inst1Quest3_Location = "Lieutenant Horatio Laine (The Deadmines; "..GREEN.."[1']"..WHITE..")"
+Inst1Quest3_Note = "This quest is also automatically given upon entering the Goblin Foundary in Deadmines.\n\nFoe Reaper 5000 is the third boss, located at "..YELLOW.."[3]"..WHITE.."."
 Inst1Quest3_Prequest = "None"
 Inst1Quest3_Folgequest = "None"
 -- No Rewards for this quest
@@ -222,8 +222,8 @@ Inst1Quest4 = "4. The Admiral"
 Inst1Quest4_Level = "16"
 Inst1Quest4_Attain = "15"
 Inst1Quest4_Aim = "Kill Admiral Ripsnarl."
-Inst1Quest4_Location = "Lieutenant Horatio Laine (The Deadmines; "..GREEN.."1'"..WHITE..")"
-Inst1Quest4_Note = "This quest is also automatically given upon entering the Ironclad Cove in Deadmines.\n\nAdmiral Ripsnarl is the third boss, located at "..YELLOW.."[4]"..WHITE.."."
+Inst1Quest4_Location = "Lieutenant Horatio Laine (The Deadmines; "..GREEN.."[1']"..WHITE..")"
+Inst1Quest4_Note = "This quest is also automatically given upon entering the Ironclad Cove in Deadmines.\n\nAdmiral Ripsnarl is the fourth boss, located at "..YELLOW.."[4]"..WHITE.."."
 Inst1Quest4_Prequest = "None"
 Inst1Quest4_Folgequest = "The Defias Kingpin"
 -- No Rewards for this quest
@@ -233,8 +233,8 @@ Inst1Quest5 = "5. The Defias Kingpin"
 Inst1Quest5_Level = "17"
 Inst1Quest5_Attain = "15"
 Inst1Quest5_Aim = "Kill the Defias Kingpin."
-Inst1Quest5_Location = "Lieutenant Horatio Laine (The Deadmines; "..GREEN.."1'"..WHITE..")"
-Inst1Quest5_Note = "This quest is also automatically given upon entering the Mastroom in Deadmines.\n\n'Captain' Cookie is the final boss, located at "..YELLOW.."[4]"..WHITE.."."
+Inst1Quest5_Location = "Lieutenant Horatio Laine (The Deadmines; "..GREEN.."[1']"..WHITE..")"
+Inst1Quest5_Note = "This quest is also automatically given upon entering the Mastroom in Deadmines.\n\n'Captain' Cookie is the final boss (on normal), located at "..YELLOW.."[4]"..WHITE.."."
 Inst1Quest5_Prequest = "The Admiral"
 Inst1Quest5_Folgequest = "None"
 Inst1Quest5FQuest = "true"
@@ -249,7 +249,7 @@ Inst1Quest1_HORDE = "1. Only the Beginning"
 Inst1Quest1_HORDE_Level = "16"
 Inst1Quest1_HORDE_Attain = "15"
 Inst1Quest1_HORDE_Aim = "Kill Glubtok."
-Inst1Quest1_HORDE_Location = "Kagtha (The Deadmines; "..GREEN.."1'"..WHITE..")"
+Inst1Quest1_HORDE_Location = "Kagtha (The Deadmines; "..GREEN.."[1']"..WHITE..")"
 Inst1Quest1_HORDE_Note = "Glubtok is the first boss, located at "..YELLOW.."[1]"..WHITE.."."
 Inst1Quest1_HORDE_Prequest = "None"
 Inst1Quest1_HORDE_Folgequest = "None"
@@ -260,7 +260,7 @@ Inst1Quest2_HORDE = "2. Traitors!!!"
 Inst1Quest2_HORDE_Level = "16"
 Inst1Quest2_HORDE_Attain = "15"
 Inst1Quest2_HORDE_Aim = "Defeat Helix Gearbreaker."
-Inst1Quest2_HORDE_Location = "Kagtha (The Deadmines; "..GREEN.."1'"..WHITE..")"
+Inst1Quest2_HORDE_Location = "Kagtha (The Deadmines; "..GREEN.."[1']"..WHITE..")"
 Inst1Quest2_HORDE_Note = "This quest is also automatically given upon entering the Mast Room in Deadmines.\n\nHelix Gearbreaker is the second boss, located at "..YELLOW.."[2]"..WHITE.."."
 Inst1Quest2_HORDE_Prequest = "None"
 Inst1Quest2_HORDE_Folgequest = "None"
@@ -271,8 +271,8 @@ Inst1Quest3_HORDE = "3. Not Quite There"
 Inst1Quest3_HORDE_Level = "16"
 Inst1Quest3_HORDE_Attain = "15"
 Inst1Quest3_HORDE_Aim = "Destroy the Foe Reaper 5000."
-Inst1Quest3_HORDE_Location = "Kagtha (The Deadmines; "..GREEN.."1'"..WHITE..")"
-Inst1Quest3_HORDE_Note = "This quest is also automatically given upon entering the Goblin Foundary in Deadmines.\n\nHelix Gearbreaker is the second boss, located at "..YELLOW.."[3]"..WHITE.."."
+Inst1Quest3_HORDE_Location = "Kagtha (The Deadmines; "..GREEN.."[1']"..WHITE..")"
+Inst1Quest3_HORDE_Note = "This quest is also automatically given upon entering the Goblin Foundary in Deadmines.\n\nFoe Reaper 5000 is the third boss, located at "..YELLOW.."[3]"..WHITE.."."
 Inst1Quest3_HORDE_Prequest = "None"
 Inst1Quest3_HORDE_Folgequest = "None"
 -- No Rewards for this quest
@@ -282,8 +282,8 @@ Inst1Quest4_HORDE = "4.Good Intentions...Poor Execution"
 Inst1Quest4_HORDE_Level = "16"
 Inst1Quest4_HORDE_Attain = "15"
 Inst1Quest4_HORDE_Aim = "Kill Admiral Ripsnarl."
-Inst1Quest4_HORDE_Location = "Kagtha (The Deadmines; "..GREEN.."1'"..WHITE..")"
-Inst1Quest4_HORDE_Note = "This quest is also automatically given upon entering the Ironclad Cove in Deadmines.\n\nAdmiral Ripsnarl is the third boss, located at "..YELLOW.."[4]"..WHITE.."."
+Inst1Quest4_HORDE_Location = "Kagtha (The Deadmines; "..GREEN.."[1']"..WHITE..")"
+Inst1Quest4_HORDE_Note = "This quest is also automatically given upon entering the Ironclad Cove in Deadmines.\n\nAdmiral Ripsnarl is the fourth boss, located at "..YELLOW.."[4]"..WHITE.."."
 Inst1Quest4_HORDE_Prequest = "None"
 Inst1Quest4_HORDE_Folgequest = "The Defias Kingpin"
 -- No Rewards for this quest
@@ -293,8 +293,8 @@ Inst1Quest5_HORDE = "5. The Defias Kingpin"
 Inst1Quest5_HORDE_Level = "17"
 Inst1Quest5_HORDE_Attain = "15"
 Inst1Quest5_HORDE_Aim = "Kill the Defias Kingpin."
-Inst1Quest5_HORDE_Location = "Kagtha (The Deadmines; "..GREEN.."1'"..WHITE..")"
-Inst1Quest5_HORDE_Note = "This quest is also automatically given upon entering the Mastroom in Deadmines.\n\n'Captain' Cookie is the final boss, located at "..YELLOW.."[4]"..WHITE.."."
+Inst1Quest5_HORDE_Location = "Kagtha (The Deadmines; "..GREEN.."[1']"..WHITE..")"
+Inst1Quest5_HORDE_Note = "This quest is also automatically given upon entering the Mastroom in Deadmines.\n\n'Captain' Cookie is the final boss (on normal), located at "..YELLOW.."[4]"..WHITE.."."
 Inst1Quest5_HORDE_Prequest = "The Admiral"
 Inst1Quest5_HORDE_Folgequest = "None"
 Inst1Quest5FQuest_HORDE = "true"
@@ -433,7 +433,7 @@ Inst3Quest3_HORDE_Level = "14"
 Inst3Quest3_HORDE_Attain = "10"
 Inst3Quest3_HORDE_Aim = "Kill Oggleflint, Bazzalan, and Jergosh the Invoker."
 Inst3Quest3_HORDE_Location = "Stone Guard Kurjack (Ragefire Chasm; "..YELLOW.."Entrance"..WHITE..")"
-Inst3Quest3_HORDE_Note = "Oggleflint is at "..YELLOW.."[1]"..WHITE..", Bazzalan is at "..YELLOW.."[3]"..WHITE.." and Jergosh the Invoker is at "..YELLOW.."[4]"..WHITE.."."
+Inst3Quest3_HORDE_Note = "Oggleflint is at "..YELLOW.."[1]"..WHITE..", Bazzalan is at "..YELLOW.."[4]"..WHITE.." and Jergosh the Invoker is at "..YELLOW.."[3]"..WHITE.."."
 Inst3Quest3_HORDE_Prequest = "None"
 Inst3Quest3_HORDE_Folgequest = "None"
 -- No Rewards for this quest
@@ -508,7 +508,7 @@ Inst4Quest5 = "5. The Platinum Discs"
 Inst4Quest5_Level = "40"
 Inst4Quest5_Attain = "37"
 Inst4Quest5_Aim = "Speak with stone watcher and learn what ancient lore it keeps. Once you have learned what lore it has to offer, activate the Discs of Norgannon."
-Inst4Quest5_Location = "The Platinum Discs (Uldaman; "..GREEN.."[3']"..WHITE..")"
+Inst4Quest5_Location = "The Platinum Discs (Uldaman; "..GREEN.."[2']"..WHITE..")"
 Inst4Quest5_Note = "The Stone Watcher is next to the discs. Turn the quest in at the discs for the next quest."
 Inst4Quest5_Prequest = "None"
 Inst4Quest5_Folgequest = "The Platinum Discs"
@@ -519,7 +519,7 @@ Inst4Quest6 = "6. The Platinum Discs"
 Inst4Quest6_Level = "40"
 Inst4Quest6_Attain = "37"
 Inst4Quest6_Aim = "Take the miniature version of the Discs of Norgannon to someone very interested in them."
-Inst4Quest6_Location = "The Platinum Discs (Uldaman; "..GREEN.."[3']"..WHITE..")"
+Inst4Quest6_Location = "The Platinum Discs (Uldaman; "..GREEN.."[2']"..WHITE..")"
 Inst4Quest6_Note = "The quest turns in to Lead Prospector Durdin at the entrance of the instance."
 Inst4Quest6_Prequest = "The Platinum Discs"
 Inst4Quest6_Folgequest = "None"
@@ -673,7 +673,7 @@ Inst5Quest6_Level = "56"
 Inst5Quest6_Attain = "51"
 Inst5Quest6_Aim = "Fight Hurley Blackbreath, Plugger Spazzring, and Ribbly Screwspigot."
 Inst5Quest6_Location = "Mayara Brightwing (Blackrock Depths; "..GREEN.."[7']"..WHITE..")"
-Inst5Quest6_Note = "All three are in the Grim Guzzler at "..YELLOW.."[12]"..WHITE..", "..YELLOW.."[13]"..WHITE.." and "..YELLOW.."[14]"..WHITE..". The quest turns in to Mountaineer Orfus near "..YELLOW.."[15]"..WHITE.."."
+Inst5Quest6_Note = "All three are in the Grim Guzzler at "..YELLOW.."[12]"..WHITE..", "..YELLOW.."[13]"..WHITE.." and "..YELLOW.."[14]"..WHITE..". The quest turns in to Mountaineer Orfus at "..GREEN.."[10']"..WHITE.."."
 Inst5Quest6_Prequest = "Dark Iron Tacticians"
 Inst5Quest6_Folgequest = "The Dark Iron Pact"
 Inst5Quest6FQuest = "true"
@@ -684,8 +684,8 @@ Inst5Quest7 = "7. The Dark Iron Pact"
 Inst5Quest7_Level = "57"
 Inst5Quest7_Attain = "51"
 Inst5Quest7_Aim = "Kill Ambassador Flamelash and Doom'rel."
-Inst5Quest7_Location = "Mountaineer Orfus (Blackrock Depths; "..YELLOW.."Near [15]"..WHITE..")"
-Inst5Quest7_Note = "Ambassador Flamelash is at "..YELLOW.."[15]"..WHITE.." and Doom'rel is at "..YELLOW.."[16]"..WHITE..". The quest turns in to Marshall Maxwell just beyond "..YELLOW.."[16]"..WHITE.."."
+Inst5Quest7_Location = "Mountaineer Orfus (Blackrock Depths; "..GREEN.."[10']"..WHITE..")"
+Inst5Quest7_Note = "Ambassador Flamelash is at "..YELLOW.."[15]"..WHITE.." and Doom'rel is at "..YELLOW.."[16]"..WHITE..". The quest turns in to Marshall Maxwell at "..GREEN.."[11']"..WHITE.."."
 Inst5Quest7_Prequest = "The Grim Guzzler"
 Inst5Quest7_Folgequest = "Morgan's Fruition"
 Inst5Quest7FQuest = "true"
@@ -696,7 +696,7 @@ Inst5Quest8 = "8. Morgan's Fruition"
 Inst5Quest8_Level = "58"
 Inst5Quest8_Attain = "51"
 Inst5Quest8_Aim = "Kill Emperor Dagran Thaurissan."
-Inst5Quest8_Location = "Marshall Maxwell (Blackrock Depths; "..YELLOW.."Beyond [16]"..WHITE..")"
+Inst5Quest8_Location = "Marshall Maxwell (Blackrock Depths; "..GREEN.."[11']"..WHITE..")"
 Inst5Quest8_Note = "Emperor Dagran Thaurissan is at "..YELLOW.."[18]"..WHITE..". The quest turns in back at Marshall Maxwell."
 Inst5Quest8_Prequest = "The Dark Iron Pact"
 Inst5Quest8_Folgequest = "None"
@@ -736,7 +736,7 @@ Inst5Quest11 = "11. Slaves of the Firelord (Shaman)"
 Inst5Quest11_Level = "50"
 Inst5Quest11_Attain = "50"
 Inst5Quest11_Aim = "Use the Totem of Freedom to free the essences of 6 Fireguards, Fireguard Destroyers, or Blazing Fireguards in Blackrock Depths."
-Inst5Quest11_Location = "Farseer Umbrua (Stormwind City - Dwarven District"..YELLOW.."65.9, 31.4"..WHITE..")"
+Inst5Quest11_Location = "Farseer Umbrua (Stormwind City - Dwarven District; "..YELLOW.."65.9, 31.4"..WHITE..")"
 Inst5Quest11_Note = "This is a Shaman class quest. The optional prequest comes from Shaman trainers in the capital cities.\n\nThe Fireguards can be found in various locations inside Blackrock Depths. Use the Totem first before killing them."
 Inst5Quest11_Prequest = "Meet with Farseer Umbrua"
 Inst5Quest11_Folgequest = "None"
@@ -845,7 +845,7 @@ Inst5Quest19_Level = "60"
 Inst5Quest19_Attain = "55"
 Inst5Quest19_Aim = "Venture to the Molten Core entry portal in Blackrock Depths and recover a Core Fragment. Return to Lothos Riftwaker in Blackrock Mountain when you have recovered the Core Fragment."
 Inst5Quest19_Location = "Lothos Riftwaker (Blackrock Mountain; "..YELLOW.."Bottom of lowest Chain"..WHITE..")"
-Inst5Quest19_Note = "After completing this quest, you can use the stone next to Lothos Riftwaker to enter the Molten Core.\nYou find the Core Fragment near "..BLUE.."[E]"..WHITE..", very close to the Molten Core portal."
+Inst5Quest19_Note = "After completing this quest, you can use the stone next to Lothos Riftwaker to enter the Molten Core.\nYou find the Core Fragment near "..BLUE.."[E]"..WHITE..", next to the Molten Core portal."
 Inst5Quest19_Prequest = "None"
 Inst5Quest19_Folgequest = "None"
 -- No Rewards for this quest
@@ -856,7 +856,7 @@ Inst5Quest20_Level = "55"
 Inst5Quest20_Attain = "55"
 Inst5Quest20_Aim = "Place the materials Gloom'Rel wants in the The Spectral Chalice."
 Inst5Quest20_Location = "Gloom'Rel (Blackrock Depths; "..YELLOW.."[16]"..WHITE..")"
-Inst5Quest20_Note = "Only Miners with skill 230 or higher can get this quest to learn Smelt Dark Iron. Materials for the Chalice: 2 [Star Ruby], 20 [Gold Bar], 10 [Truesilver Bar]. Afterwards, if you have [Dark Iron Ore] you can take it to The Black Forge near "..BLUE.."[E]"..WHITE.." and Smelt it."
+Inst5Quest20_Note = "Only Miners with skill 230 or higher can get this quest to learn Smelt Dark Iron. Materials for the Chalice: 2 [Star Ruby], 20 [Gold Bar], 10 [Truesilver Bar]. Afterwards, if you have [Dark Iron Ore] you can take it to The Black Forge at "..GREEN.."[12']"..WHITE.." and Smelt it."
 Inst5Quest20_Prequest = "None"
 Inst5Quest20_Folgequest = "None"
 -- No Rewards for this quest
@@ -937,7 +937,7 @@ Inst5Quest6_HORDE_Level = "56"
 Inst5Quest6_HORDE_Attain = "51"
 Inst5Quest6_HORDE_Aim = "Fight Hurley Blackbreath, Plugger Spazzring, and Ribbly Screwspigot."
 Inst5Quest6_HORDE_Location = "Hierophant Theodora Mulvadania (Blackrock Depths; "..GREEN.."[7']"..WHITE..")"
-Inst5Quest6_HORDE_Note = "All three are in the Grim Guzzler at "..YELLOW.."[12]"..WHITE..", "..YELLOW.."[13]"..WHITE.." and "..YELLOW.."[14]"..WHITE..". The quest turns in to Thunderheart near "..YELLOW.."[15]"..WHITE.."."
+Inst5Quest6_HORDE_Note = "All three are in the Grim Guzzler at "..YELLOW.."[12]"..WHITE..", "..YELLOW.."[13]"..WHITE.." and "..YELLOW.."[14]"..WHITE..". The quest turns in to Thunderheart at "..GREEN.."[10']"..WHITE.."."
 Inst5Quest6_HORDE_Prequest = "The 109th Division"
 Inst5Quest6_HORDE_Folgequest = "The Dark Iron Pact"
 Inst5Quest6FQuest_HORDE = "true"
@@ -948,8 +948,8 @@ Inst5Quest7_HORDE = "7. The Dark Iron Pact"
 Inst5Quest7_HORDE_Level = "57"
 Inst5Quest7_HORDE_Attain = "51"
 Inst5Quest7_HORDE_Aim = "Kill Ambassador Flamelash and Doom'rel."
-Inst5Quest7_HORDE_Location = "Thunderheart (Blackrock Depths; "..YELLOW.."Near [15]"..WHITE..")"
-Inst5Quest7_HORDE_Note = "Ambassador Flamelash is at "..YELLOW.."[15]"..WHITE.." and Doom'rel is at "..YELLOW.."[16]"..WHITE..". The quest turns in to Warlord Goretooth just beyond "..YELLOW.."[16]"..WHITE.."."
+Inst5Quest7_HORDE_Location = "Thunderheart (Blackrock Depths; "..GREEN.."[10']"..WHITE..")"
+Inst5Quest7_HORDE_Note = "Ambassador Flamelash is at "..YELLOW.."[15]"..WHITE.." and Doom'rel is at "..YELLOW.."[16]"..WHITE..". The quest turns in to Warlord Goretooth at "..GREEN.."[11']"..WHITE.."."
 Inst5Quest7_HORDE_Prequest = "The Grim Guzzler"
 Inst5Quest7_HORDE_Folgequest = "Rebirth of the K.E.F."
 Inst5Quest7FQuest_HORDE = "true"
@@ -960,7 +960,7 @@ Inst5Quest8_HORDE = "8. Rebirth of the K.E.F."
 Inst5Quest8_HORDE_Level = "58"
 Inst5Quest8_HORDE_Attain = "51"
 Inst5Quest8_HORDE_Aim = "Kill Emperor Dagran Thaurissan."
-Inst5Quest8_HORDE_Location = "Warlord Goretooth (Blackrock Depths; "..YELLOW.."Beyond [16]"..WHITE..")"
+Inst5Quest8_HORDE_Location = "Warlord Goretooth (Blackrock Depths; "..GREEN.."[11']"..WHITE..")"
 Inst5Quest8_HORDE_Note = "Emperor Dagran Thaurissan is at "..YELLOW.."[18]"..WHITE..". The quest turns in back at Warlord Goretooth."
 Inst5Quest8_HORDE_Prequest = "The Dark Iron Pact"
 Inst5Quest8_HORDE_Folgequest = "None"
@@ -1000,7 +1000,7 @@ Inst5Quest11_HORDE = "11. Slaves of the Firelord (Shaman)"
 Inst5Quest11_HORDE_Level = "50"
 Inst5Quest11_HORDE_Attain = "50"
 Inst5Quest11_HORDE_Aim = "Use the Totem of Freedom to free the essences of 6 Fireguards, Fireguard Destroyers, or Blazing Fireguards in Blackrock Depths."
-Inst5Quest11_HORDE_Location = "Kardris Dreamseeker (Orgrimmar - Valley of Wisdom"..YELLOW.."39.5, 47.0"..WHITE..")"
+Inst5Quest11_HORDE_Location = "Kardris Dreamseeker (Orgrimmar - Valley of Wisdom; "..YELLOW.."39.5, 47.0"..WHITE..")"
 Inst5Quest11_HORDE_Note = "This is a Shaman class quest. The optional prequest comes from Shaman trainers in the capital cities.\n\nThe Fireguards can be found in various locations inside Blackrock Depths. Use the Totem first before killing them."
 Inst5Quest11_HORDE_Prequest = "Meet with Kardris Dreamseeker"
 Inst5Quest11_HORDE_Folgequest = "None"
@@ -1331,7 +1331,7 @@ Inst7Quest4_HORDE = "4. The Enemy of My Enemy"
 Inst7Quest4_HORDE_Level = "28"
 Inst7Quest4_HORDE_Attain = "21"
 Inst7Quest4_HORDE_Aim = "Obtain the head of Twilight Lord Kelris."
-Inst7Quest4_HORDE_Location = "Flaming Eradicator (Blackfathom Deeps; "..GREEN.."[3']"..WHITE..")"
+Inst7Quest4_HORDE_Location = "Flaming Eradicator (Blackfathom Deeps; "..GREEN.."[4']"..WHITE..")"
 Inst7Quest4_HORDE_Note = "Twilight Lord Kelris is at "..YELLOW.."[5]"..WHITE..". The quest turns in back at the entrance."
 Inst7Quest4_HORDE_Prequest = "None"
 Inst7Quest4_HORDE_Folgequest = "None"
@@ -1497,7 +1497,7 @@ Inst9Quest3 = "3. Blackhand's Command"
 Inst9Quest3_Level = "60"
 Inst9Quest3_Attain = "55"
 Inst9Quest3_Aim = "That is one stupid orc. It would appear as if you need to find this brand and gain the Mark of Drakkisath in order to access the Orb of Command."
-Inst9Quest3_Location = "Blackhand's Command (drops from Scarshield Quartermaster at Blackrock Mountain; "..ORANGE.."[1']"..WHITE..")"
+Inst9Quest3_Location = "Blackhand's Command (drops from Scarshield Quartermaster at Blackrock Mountain; "..DARKYELLOW.."[1']"..WHITE..")"
 Inst9Quest3_Note = "The Scarshield Quartermaster that drops the item to start the quest is outside the instance in Blackrock Mountain. He is down a hallway to the right of the entrance to the instance.\n\nThe Mark of Drakkisath is behind General Drakkisath at "..YELLOW.."[6]"..WHITE.." within Upper Blackrock Spire."
 Inst9Quest3_Prequest = "None"
 Inst9Quest3_Folgequest = "None"
@@ -10858,7 +10858,7 @@ Inst94Quest3 = "3. The Twilight Destroyer"
 Inst94Quest3_Level = "80"
 Inst94Quest3_Attain = "80"
 Inst94Quest3_Aim = "Defeat Halion and repel the invasion of the Ruby Sanctum."
-Inst94Quest3_Location = "Sanctum Guardian Xerestrasza (Ruby Sanctum; "..YELLOW.."[A] Entrance"..WHITE..")"
+Inst94Quest3_Location = "Sanctum Guardian Xerestrasza (Ruby Sanctum; "..YELLOW.."[2]"..WHITE..")"
 Inst94Quest3_Note = "Halion is the main boss, located at "..YELLOW.."[4]"..WHITE.."."
 Inst94Quest3_Prequest = "Trouble at Wyrmrest"
 Inst94Quest3_Folgequest = "None"
@@ -11158,7 +11158,7 @@ Inst97Quest2_Level = "84"
 Inst97Quest2_Attain = "82"
 Inst97Quest2_Aim = "Obtain the Twilight Documents."
 Inst97Quest2_Location = "Earthwarden Yrsa (The Stonecore; "..YELLOW.."Entrance"..WHITE..")"
-Inst97Quest2_Note = "The documents appear on the ground after defeating Corborus at "..YELLOW.."[1]"..WHITE.."."
+Inst97Quest2_Note = "The documents are on the ground after Corborus makes its entrance at "..YELLOW.."[1]"..WHITE.."."
 Inst97Quest2_Prequest = "None"
 Inst97Quest2_Folgequest = "Followers and Leaders"
 -- No Rewards for this quest
@@ -11184,8 +11184,8 @@ Inst97Quest4_Level = "84"
 Inst97Quest4_Attain = "82"
 Inst97Quest4_Aim = "Slay Ozruk."
 Inst97Quest4_Location = "Therazane (Deepholm - Therazane's Throne; "..YELLOW.."56.3, 12.8"..WHITE..")"
-Inst97Quest4_Note = "Ozruk is at "..YELLOW.."[3]"..WHITE..". Missing info on any prequests or reputation requirements for this quest."
-Inst97Quest4_Prequest = "None"
+Inst97Quest4_Note = "Ozruk is at "..YELLOW.."[3]"..WHITE..". To obtain this quest you must complete the questline that allows you to access the Therazane daily quests.  This questline itself requires you complete most of the quests in Deepholm."
+Inst97Quest4_Prequest = "Most of the Deepholm Quests"
 Inst97Quest4_Folgequest = "None"
 --
 Inst97Quest4name1 = "Leggings of the Lost Child"
@@ -11351,7 +11351,7 @@ Inst99Quest1_Level = "85"
 Inst99Quest1_Attain = "84"
 Inst99Quest1_Aim = "Free a Red Drake within Grim Batol and use it to destroy 30 Troggs and 15 Twilight's Hammer minions."
 Inst99Quest1_Location = "Velastrasza (Grim Batol; "..YELLOW.."Entrance"..WHITE..")"
-Inst99Quest1_Note = "Missing information. The quest turns in back at the entrance."
+Inst99Quest1_Note = "After the first few trash pulls you'll be able to use red drakes to fly down the long halls and rain down fire upon the Twilight enemies. The quest turns in back at the entrance."
 Inst99Quest1_Prequest = "None"
 Inst99Quest1_Folgequest = "None"
 --
@@ -11441,7 +11441,7 @@ Inst100Quest1_Level = "83"
 Inst100Quest1_Attain = "83"
 Inst100Quest1_Aim = "Brann Bronzebeard wants you to meet him in the Halls of Origination."
 Inst100Quest1_Location = "Brann Bronzebeard (Uldum - Cradle of the Ancients; "..YELLOW.."44.9, 67.4"..WHITE..")"
-Inst100Quest1_Note = "Brann Bronzebeard is a little bit inside the Halls of Origination. The prequest line is part of a series of other quests you'll do while in Uldum."
+Inst100Quest1_Note = "Brann Bronzebeard is at "..GREEN.."[2']"..WHITE..". The prequest line is part of a series of other quests you'll do while in Uldum."
 Inst100Quest1_Prequest = "Sullah's Gift -> The Coffer of Promise"
 Inst100Quest1_Folgequest = "Penetrating Their Defenses"
 Inst100PreQuest = "true"
@@ -11452,8 +11452,8 @@ Inst100Quest2 = "2. Penetrating Their Defenses"
 Inst100Quest2_Level = "83"
 Inst100Quest2_Attain = "83"
 Inst100Quest2_Aim = "Gain entry to the Titan Control Room."
-Inst100Quest2_Location = "Brann Bronzebeard (Halls of Origination; "..YELLOW.."[??]"..WHITE..")"
-Inst100Quest2_Note = "The Titan Control Room is accessible after defeating Anraphet at "..YELLOW.."3"..WHITE.."."
+Inst100Quest2_Location = "Brann Bronzebeard (Halls of Origination; "..GREEN.."[2']"..WHITE..")"
+Inst100Quest2_Note = "The Titan Control Room is accessible after defeating Anraphet at "..YELLOW.."[3]"..WHITE.."."
 Inst100Quest2_Prequest = "The Heart of the Matter"
 Inst100Quest2_Folgequest = "Doing it the Hard Way"
 Inst100Quest2FQuest = "true"
@@ -11467,7 +11467,7 @@ Inst100Quest3 = "3. Doing it the Hard Way"
 Inst100Quest3_Level = "83"
 Inst100Quest3_Attain = "83"
 Inst100Quest3_Aim = "Brann Bronzebeard wants you to kill Isiset, Ammunae, Setesh, and Rajh."
-Inst100Quest3_Location = "Brann Bronzebeard (Halls of Origination; "..YELLOW.."[??]"..WHITE..")"
+Inst100Quest3_Location = "Brann Bronzebeard (Halls of Origination; "..GREEN.."[2']"..WHITE..")"
 Inst100Quest3_Note = "Isiset is at "..YELLOW.."[4]"..WHITE..", Ammunae is at "..YELLOW.."[5]"..WHITE..", Setesh is at "..YELLOW.."[6]"..WHITE..", and Rajh is at "..YELLOW.."[7]"..WHITE.."."
 Inst100Quest3_Prequest = "Penetrating Their Defenses"
 Inst100Quest3_Folgequest = "None"
@@ -11547,7 +11547,7 @@ Inst101Quest2_Level = "85"
 Inst101Quest2_Attain = "83"
 Inst101Quest2_Aim = "Slay General Husam and 2 Oathsworn Captains."
 Inst101Quest2_Location = "Captain Hadan (Lost City of the Tol'vir; "..YELLOW.."Entrance"..WHITE..")"
-Inst101Quest2_Note = "General Husam is at "..YELLOW.."[1]"..WHITE..". The quest turns in back at the entrance."
+Inst101Quest2_Note = "General Husam is at "..YELLOW.."[1]"..WHITE..". The Oathsworn Captains are on the paths to either side of him. The quest turns in back at the entrance."
 Inst101Quest2_Prequest = "None"
 Inst101Quest2_Folgequest = "None"
 --
